[package]
name = "lib_file"
version = "0.1.5"
authors = ["John T. Reagan"]
edition = "2024"
license = "MIT"
description = "File handling utility functions."
readme = "/home/jtreagan/programming/mine/lib_file/README.MD"
documentation = "https://docs.rs/lib_file"
repository = "https://github.com/jtreagan/lib_file"
#keywords = ["file, file utilities"]

[dependencies]
# Non-standard crates
fltk = { version = "^1.5", features = ["fltk-bundled"] }


# Reagan created crates
#lib_utils = {git = "https://github.com/jtreagan/lib_utils.git", version = "^0.1.2" }
lib_utils = "^0.1.2"
